--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
+    "vite": "^4.3.9",
     "vitest": "^0.31.0"
   },
   "volta": {
