--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/ui": "^0.31.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "jsdom": "^22.0.0",
@@ -34,8 +35,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vite": "^4.3.9",
-    "vitest": "^0.31.0",
-    "@vitest/ui": "^0.31.0"
+    "vitest": "^0.31.0"
   },
   "volta": {
     "node": "20.17.0",
