--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
@@ -30,6 +31,7 @@
     "@vitest/ui": "^0.31.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "eslint-plugin-vitest-globals": "^1.5.0",
     "jsdom": "^22.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
