--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "prepare": "husky",
+    "format": "prettier --write ."
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
@@ -32,8 +37,11 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "eslint-plugin-vitest-globals": "^1.5.0",
+    "husky": "^9.1.6",
     "jsdom": "^22.0.0",
+    "lint-staged": "^13.3.0",
     "postcss": "^8",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vite": "^4.3.9",
