chore: add pre-push hooks

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "vitest watch",
     "prepare": "husky",
     "format": "prettier --write .",
-    "test:push": "git rev-parse --abbrev-ref HEAD | grep -q '^main$' && npm test || exit 0"
+    "test:push": "git rev-parse --abbrev-ref HEAD | grep -q '^main$' && vitest run || exit 0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
